--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,6 @@ BugReports: https://github.com/HannahVMeyer/plinkQC/issues
 Maintainer: Hannah Meyer <hannah@ebi.ac.uk>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
 Depends:
     R (>= 3.3.0)
 Imports:
@@ -30,3 +29,4 @@ SystemRequirements:
     plink (>= 1.9)
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.1.0
