Update functions and documenations to pass devtoolss::check; mainly dplyr/ggplot global variable fixes via dplyr::*_(data, ~*) and aes_string

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,8 @@ Imports:
     optparse,
     data.table (>= 1.11.0),
     ggplot2,
+    ggforce,
+    ggrepel,
     cowplot,
     UpSetR,
     dplyr
