Add combn as import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,5 +23,6 @@ importFrom(optparse,OptionParser)
 importFrom(optparse,make_option)
 importFrom(optparse,parse_args)
 importFrom(stats,sd)
+importFrom(utils,combn)
 importFrom(utils,read.table)
 importFrom(utils,write.table)
