overviewPerMarkerQC; add verbose for PlinkOutput; fix minor plotting issues

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(check_relatedness)
 export(check_sex)
 export(check_snp_missingness)
 export(clean_data)
+export(overviewPerMarkerQC)
 export(overviewPerSampleQC)
 export(perMarkerQC)
 export(perSampleQC)
