--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,5 +3,6 @@ pkgdown: 1.1.0.9000
 pkgdown_sha: 6e70f7b8610b52658ada49e40e2d05bcf2c0616a
 articles:
   AncestryCheck: AncestryCheck.html
+  HapMap: HapMap.html
   plinkQC: plinkQC.html
 
