--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(check_relatedness)
 export(check_sex)
 export(check_snp_missingness)
 export(cleanData)
+export(evaluate_check_ancestry)
 export(evaluate_check_het_and_miss)
 export(evaluate_check_relatedness)
 export(evaluate_check_sex)
@@ -15,6 +16,7 @@ export(overviewPerIndividualQC)
 export(overviewPerMarkerQC)
 export(perIndividualQC)
 export(perMarkerQC)
+export(run_check_ancestry)
 export(run_check_heterozygosity)
 export(run_check_missingness)
 export(run_check_relatedness)
