--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,14 +5,12 @@ Version: 0.1.0
 Authors@R:
     person("Hannah", "Meyer", email = "hannah@ebi.ac.uk",
     role = c("aut", "cre"), comment = c(ORCID = "0000-0003-4564-0899"))
-URL: c(
-    https://github.com/HannahVMeyer/plinkQC, 
-    https://hannahvmeyer.github.io/plinkQC)
+URL: https://github.com/HannahVMeyer/plinkQC
 BugReports: https://github.com/HannahVMeyer/plinkQC/issues
 Maintainer: Hannah Meyer <hannah@ebi.ac.uk>
 Description: Genotyping arrays enable the direct measurement of an individuals
     genotype at thousands of markers. plinkQC facilitates genotype quality
-    control for genetic association studies as described by Anderson et al
+    control for genetic association studies as described by Anderson et al.
     (2010) Nature Protocols. It wraps around PLINK basic statistics (e.g.
     missing genotyping rates per individual, allele frequencies per genetic
     marker) and relationship functions and generates a per-individual and
