--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,8 +2,8 @@ pandoc: 1.19.2.1
 pkgdown: 1.1.0.9000
 pkgdown_sha: 6e70f7b8610b52658ada49e40e2d05bcf2c0616a
 articles:
-  1000Genomes: 1000Genomes.html
   AncestryCheck: AncestryCheck.html
+  Genomes1000: Genomes1000.html
   HapMap: HapMap.html
   plinkQC: plinkQC.html
 
