--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R:
     role = c("aut", "cre"), comment = c(ORCID = "0000-0003-4564-0899"))
 URL: https://github.com/HannahVMeyer/plinkQC
 BugReports: https://github.com/HannahVMeyer/plinkQC/issues
-Maintainer: Hannah Meyer <hannah@ebi.ac.uk>
+Maintainer: Hannah Meyer <hannah.v.meyer@gmail.com>
 Description: Genotyping arrays enable the direct measurement of an individuals
     genotype at thousands of markers. 'plinkQC' facilitates genotype quality
     control for genetic association studies as described by Anderson and
