--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,6 @@
-pandoc: 1.19.2.1
-pkgdown: 1.1.0.9000
-pkgdown_sha: 6e70f7b8610b52658ada49e40e2d05bcf2c0616a
+pandoc: 2.3.1
+pkgdown: 1.3.0
+pkgdown_sha: ~
 articles:
   AncestryCheck: AncestryCheck.html
   Genomes1000: Genomes1000.html
