--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,9 @@ Version: 0.2.3
 Authors@R:
     person("Hannah", "Meyer", email = "hannah.v.meyer@gmail.com",
     role = c("aut", "cre"), comment = c(ORCID = "0000-0003-4564-0899"))
-URL: https://github.com/HannahVMeyer/plinkQC
+URL:
+    https://github.com/HannahVMeyer/plinkQC,
+    https://hannahvmeyer.github.io/plinkQC
 BugReports: https://github.com/HannahVMeyer/plinkQC/issues
 Maintainer: Hannah Meyer <hannah.v.meyer@gmail.com>
 Description: Genotyping arrays enable the direct measurement of an individuals
