--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,11 @@ Package: plinkQC
 Type: Package
 Title: Genotype Quality Control with 'PLINK'
 Version: 0.3.4
-Authors@R:
+Authors@R: c(
     person("Hannah", "Meyer", email = "hannah.v.meyer@gmail.com",
-    role = c("aut", "cre"), comment = c(ORCID = "0000-0003-4564-0899"))
+    role = c("aut", "cre"), comment = c(ORCID = "0000-0003-4564-0899")),
+    person("Caroline", "Walter", email= "carowalter26@hotmail.com",
+    role = c("aut", "cre")))
 URL: https://meyer-lab-cshl.github.io/plinkQC/
 BugReports: https://github.com/meyer-lab-cshl/plinkQC/issues
 Maintainer: Hannah Meyer <hannah.v.meyer@gmail.com>
