--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R: c(
     person("Hannah", "Meyer", email = "hannah.v.meyer@gmail.com",
     role = c("aut", "cre"), comment = c(ORCID = "0000-0003-4564-0899")),
     person("Caroline", "Walter", email= "carowalter26@hotmail.com",
-    role = c("aut", "cre")))
+    role = c("ctb")))
 URL: https://meyer-lab-cshl.github.io/plinkQC/
 BugReports: https://github.com/meyer-lab-cshl/plinkQC/issues
 Maintainer: Hannah Meyer <hannah.v.meyer@gmail.com>
