--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(checkFiltering)
 export(checkPlink)
+export(checkPlink2)
 export(check_ancestry)
 export(check_het_and_miss)
 export(check_hwe)
@@ -24,6 +25,7 @@ export(run_check_heterozygosity)
 export(run_check_missingness)
 export(run_check_relatedness)
 export(run_check_sex)
+export(superpop_classification)
 export(testNumerics)
 import(ggplot2)
 importFrom(UpSetR,upset)
