--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(check_relatedness)
 export(check_sex)
 export(check_snp_missingness)
 export(cleanData)
+export(convert_to_plink2)
 export(evaluate_check_ancestry)
 export(evaluate_check_het_and_miss)
 export(evaluate_check_relatedness)
@@ -20,6 +21,7 @@ export(overviewPerMarkerQC)
 export(perIndividualQC)
 export(perMarkerQC)
 export(relatednessFilter)
+export(rename_variant_identifiers)
 export(run_check_ancestry)
 export(run_check_heterozygosity)
 export(run_check_missingness)
@@ -39,7 +41,10 @@ importFrom(methods,is)
 importFrom(optparse,OptionParser)
 importFrom(optparse,make_option)
 importFrom(optparse,parse_args)
+importFrom(randomForest,randomForest)
+importFrom(stats,predict)
 importFrom(stats,sd)
 importFrom(utils,combn)
+importFrom(utils,read.csv)
 importFrom(utils,read.table)
 importFrom(utils,write.table)
