--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,8 +42,10 @@ importFrom(optparse,OptionParser)
 importFrom(optparse,make_option)
 importFrom(optparse,parse_args)
 importFrom(randomForest,randomForest)
+importFrom(stats,median)
 importFrom(stats,predict)
 importFrom(stats,sd)
+importFrom(tidyr,pivot_longer)
 importFrom(utils,combn)
 importFrom(utils,read.csv)
 importFrom(utils,read.table)
