--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export(checkFiltering)
 export(checkPlink)
 export(checkPlink2)
-export(check_ancestry)
 export(check_het_and_miss)
 export(check_hwe)
 export(check_maf)
@@ -12,7 +11,6 @@ export(check_sex)
 export(check_snp_missingness)
 export(cleanData)
 export(convert_to_plink2)
-export(evaluate_check_ancestry)
 export(evaluate_check_het_and_miss)
 export(evaluate_check_relatedness)
 export(evaluate_check_sex)
@@ -20,9 +18,9 @@ export(overviewPerIndividualQC)
 export(overviewPerMarkerQC)
 export(perIndividualQC)
 export(perMarkerQC)
+export(pruning_ld)
 export(relatednessFilter)
 export(rename_variant_identifiers)
-export(run_check_ancestry)
 export(run_check_heterozygosity)
 export(run_check_missingness)
 export(run_check_relatedness)
