--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -39,6 +39,7 @@ inst/extdata/data.imiss
 inst/extdata/data.lmiss
 inst/extdata/data.fail-sexcheck.IDs
 inst/extdata/data.sexcheck
+inst/extdata/load_mat/
 
 _pkgdown.yml
 
