--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -14,7 +14,6 @@ reference:
   - '`check_sex`'
   - '`check_relatedness`'
   - '`check_het_and_miss`'
-  - '`check_ancestry`'
 - title: Marker quality control functions
   desc: Functions for step-by-step per-marker quality control
   contents:
@@ -33,8 +32,6 @@ reference:
   - '`evaluate_check_het_and_miss`'
   - '`run_check_relatedness`'
   - '`evaluate_check_relatedness`'
-  - '`run_check_ancestry`'
-  - '`evaluate_check_ancestry`'
 - title: General helper functions
   desc: ~
   contents:
@@ -44,6 +41,7 @@ reference:
   - '`relatednessFilter`'
   - '`checkFiltering`'
   - '`rename_variant_identifiers`'
+  - '`pruning_ld`'
 - title: Identifying Ancestry
   desc: ~
   contents:
@@ -57,8 +55,10 @@ navbar:
   left:
     - icon: fa-home
       href: index.html
+      aria-label: "ho"
     - icon: fa-file
-      text: "documentation"
+      aria-label: "Documentation"
+      text: "Documentation"
       menu:
       -  text: "Step-by-step QC"
          href: articles/plinkQC.html
