passing CRAN checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(perMarkerQC)
 export(pruning_ld)
 export(relatednessFilter)
 export(rename_variant_identifiers)
+export(run_ancestry_format)
 export(run_check_heterozygosity)
 export(run_check_missingness)
 export(run_check_relatedness)
