--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -42,11 +42,12 @@ reference:
   - '`checkFiltering`'
   - '`rename_variant_identifiers`'
   - '`pruning_ld`'
+  - '`convert_to_plink2`'
 - title: Identifying Ancestry
   desc: ~
   contents:
-  - '`convert_to_plink2`'
   - '`superpop_classification`'
+  - '`run_ancestry_format`'
 - title: internal
   contents:
   - '`checkRemoveIDs`'
