--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,10 +3,11 @@ pkgdown: 2.1.3
 pkgdown_sha: ~
 articles:
   AncestryCheck: AncestryCheck.html
+  Genomes1000: Genomes1000.html
   HapMap: HapMap.html
   my-vignette: my-vignette.html
   plinkQC: plinkQC.html
-last_built: 2025-11-20T19:57Z
+last_built: 2025-11-24T07:19Z
 urls:
   reference: https://meyer-lab-cshl.github.io/plinkQC/reference
   article: https://meyer-lab-cshl.github.io/plinkQC/articles
