--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: plinkQC
 Type: Package
 Title: Genotype Quality Control with 'PLINK'
-Version: 0.3.4
+Version: 1.0.0
 Authors@R: c(
     person("Hannah", "Meyer", email = "hannah.v.meyer@gmail.com",
     role = c("aut", "cre"), comment = c(ORCID = "0000-0003-4564-0899")),
@@ -22,7 +22,7 @@ Description: Genotyping arrays enable the direct measurement of an individuals
     Individuals and markers that fail the quality control can subsequently be
     removed to generate a new, clean dataset. Removal of individuals based on
     relationship status is optimised to retain as many individuals as possible
-    in the study. Additionally, there is a pre-trained classifier to predict 
+    in the study. Additionally, there is a trained classifier to predict 
     genomic ancestry of human samples.
 Depends:
     R (>= 3.6.0)
